--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 <p>Profit: $${scenario2Profit.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })}</p>
                 <p>ROI: ${scenario2ROI.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })}%</p>
 
-                <p><strong>Scenario 3 (Renovation +20%, ARV -20%, Holding +4 months):</strong></p>
+                <p><strong>Scenario 3 (Renovation +20%, ARV -20%, Holding +4 months):Renovation=10,000 + ARV=60,000 + Monthly Holding Cost=8,800 : Total:78,800</strong></p>
                 <p>Profit: $${scenario3Profit.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })}</p>
                 <p>ROI: ${scenario3ROI.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })}%</p>`;
         }
