--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <div class="lg:flex lg:space-x-6">
                 <!-- Calculator Form -->
-                <div class="lg:w-1/2 bg-gray-50 p-6 rounded-lg shadow-md mb-6 lg:mb-0 flex-none h-[600px]">
+                <div class="lg:w-1/2 bg-gray-50 p-6 rounded-lg shadow-md mb-6 lg:mb-0 flex-none min-h-[600px] sm:min-h-[700px]"">
                     <form id="calculator-form" class="grid grid-cols-1 md:grid-cols-2 gap-4">
                         <div>
                             <label id="label-home-price" class="block text-gray-700 mb-1 text-sm" for="home-price">
