update change print pdf to save to pdf

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
             <div class="text-center mb-6">
                 <button id="language-toggle" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md transition duration-200" onclick="toggleLanguage()">Español</button>
-                <button class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-md transition duration-200" onclick="printResults()">Print to PDF</button>
+                <button class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-md transition duration-200" onclick="printResults()">Save to PDF</button>
             </div>
             
             <div class="lg:flex lg:space-x-6">
