--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
                     "label-savePdfBtn": "Save to PDF",
                     "disclaimer": "Disclaimer: This calculator provides estimates only. Perform additional analysis and due diligence before making any investment decisions.",
                     // Tooltip translations
-                    "tooltip-home-price": "How much you're offering to buy the house",
+                    "tooltip-home-price": "How much you're offering to buy the house.",
                     "tooltip-down-payment": "The percentage of the downpayment on your loan.",
                     "tooltip-interest-rate": "The interest rate of your loan.",
                     "tooltip-holding-period": "The total months from purchase through renovation to sale.",
                     "tooltip-renovation-cost": "The total cost of your renovations.",
-                    "tooltip-purchase-closing": "Fees related to the purchase closing, as a percentage of the home price",
+                    "tooltip-purchase-closing": "Fees related to the purchase closing, as a percentage of the home price.",
                     "tooltip-property-taxes": "Annual property taxes.",
                     "tooltip-insurance": "The annual premium for home insurance.",
                     "tooltip-utilities": "An estimate of your monthly gas, electricity, water, and sewer costs.",
@@ -292,12 +292,12 @@
                     "label-savePdfBtn": "Guardar como PDF",
                     "disclaimer": "Descargo de responsabilidad: Esta calculadora solo proporciona estimaciones. Realice análisis adicionales y la debida diligencia antes de tomar cualquier decisión de inversión.",
                     // Tooltip translations
-                    "tooltip-home-price": "Cuánto estás ofreciendo para comprar la casa",
+                    "tooltip-home-price": "Cuánto estás ofreciendo para comprar la casa.",
                     "tooltip-down-payment": "El porcentaje del pago inicial de tu préstamo.",
                     "tooltip-interest-rate": "La tasa de interés de tu préstamo.",
                     "tooltip-holding-period": "El total de meses desde la compra hasta la venta, incluyendo la renovación.",
                     "tooltip-renovation-cost": "El costo total de tus renovaciones.",
-                    "tooltip-purchase-closing": "Honorarios relacionados con el cierre de la compra, como porcentaje del precio de la casa",
+                    "tooltip-purchase-closing": "Honorarios relacionados con el cierre de la compra, como porcentaje del precio de la casa.",
                     "tooltip-property-taxes": "Impuestos anuales de propiedad.",
                     "tooltip-insurance": "La prima anual del seguro de la casa.",
                     "tooltip-utilities": "Una estimación de tus costos mensuales de gas, electricidad, agua y alcantarillado.",
